--- a/myapp/package.json
+++ b/myapp/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fast-glob": "^3.3.2",
+    "unplugin-auto-import": "^0.18.2"
   }
 }
